--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   backend:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.local # Utilise Dockerfile.local pour développement local
     container_name: chatbot-backend
     ports:
       - "8000:8000"
@@ -38,7 +38,7 @@ services:
   frontend:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.local # Utilise Dockerfile.local pour développement local
     container_name: chatbot-frontend
     ports:
       - "8501:8501"
